--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/nav_calendar"
-        android:name="fingertiptech.medontime.ui.calendar.CalendarFragment"
+        android:name="fingertiptech.medontime.ui.calendar2.CalendarFragment"
         android:label="@string/menu_calendar"
         tools:layout="@layout/fragment_calendar" />
 
