styles.xml added, Login layout finished, add medicine layout finished

--- a/app/src/main/res/layout/fragment_medicine.xml
+++ b/app/src/main/res/layout/fragment_medicine.xml
@@ -1,22 +1,178 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.medicine.MedicineFragment">
+    android:id="@+id/parentLayout"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:layout_gravity="center">
 
-    <TextView
-        android:id="@+id/text_medicine"
-        android:layout_width="match_parent"
+    <TableLayout
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_width="wrap_content"
+        android:layout_margin="15dp">
+
+        <TableRow>
+
+            <TextView
+                style="@style/CustomText"
+                android:layout_width="165dp"
+                android:text="Medication Name" />
+
+            <EditText
+                android:id="@+id/editText_medName"
+                android:width="150dp"
+                android:layout_span="2"
+                android:hint="Enter name here"
+                android:maxLength="30" />
+        </TableRow>
+        <TableRow>
+
+            <TextView
+                style="@style/CustomText"
+                android:layout_width="80dp"
+                android:text="unit" />
+
+            <EditText
+                android:id="@+id/unit"
+                android:width="150dp"
+                android:inputType = "number"
+                android:hint="Enter unit here"
+                />
+            <Spinner
+                android:id="@+id/unitTypeSpinner"
+                android:width="80dp"
+                android:layout_height="wrap_content"
+                android:entries="@array/UnitTypeList"
+                android:prompt="@string/unitTypePrompt"/>
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                style="@style/CustomText"
+                android:layout_width="165dp"
+                android:text="Condition" />
+
+            <EditText
+                android:id="@+id/editText_condition"
+                android:width="150dp"
+                android:layout_span="2"
+                android:hint="What are you taking this medication for?" />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                style="@style/CustomText"
+                android:text="Upload Picture"
+                />
+
+            <Button
+                style="@style/btnStyle"
+                android:id="@+id/btnMedPic"
+                android:layout_span="2"
+                android:text="Open Camera"
+                android:onClick="openCamera"/>
+
+        </TableRow>
+        <TableRow>
+            <TextView
+                style="@style/CustomText"
+                android:text="Picture"
+                />
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="180dp"
+                android:layout_height="150dp"
+                />
+        </TableRow>
+        <TableRow>
+            <TextView
+                style="@style/CustomText"
+                android:text="Frequency"
+                />
+            <Spinner
+                android:id="@+id/frequencySpinner"
+                android:width="80dp"
+                android:layout_height="wrap_content"
+                android:entries="@array/FrequencyList" />
+        </TableRow>
+        <TableRow>
+            <TextView
+                style="@style/CustomText"
+                android:text="Interval"
+                />
+            <EditText
+                android:id="@+id/editText_hoursInBetween"
+                android:width="150dp"
+                android:layout_span="2"
+                android:hint="Hours between each dose" />
+        </TableRow>
+
+        <!--        <TableRow>-->
+        <!--            <TextView-->
+        <!--                style="@style/CustomText"-->
+        <!--                android:text="Alarm?"/>-->
+        <!--            <ToggleButton-->
+        <!--                android:id="@+id/toggle_button"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:text="Toggle"-->
+        <!--            android:textOff="OFF"-->
+        <!--            android:textOn="ON" />-->
+        <!--        </TableRow>-->
+        <TableRow>
+            <TextView
+                style="@style/CustomText"
+                android:text="First dose time"/>
+
+            <Button
+                style="@style/btnStyle"
+                android:id="@+id/btnSetAlarm"
+                android:text="Set Time"
+                android:layout_span="2"
+                android:onClick="setTime"/>
+
+        </TableRow>
+        <TableRow>
+            <TextView
+                android:id="@+id/textView_displaySettingTime"
+                style="@style/CustomText"
+                android:text=""/>
+            <Button
+                style="@style/btnStyle"
+                android:id="@+id/btnCancelAlarm"
+                android:onClick="cancelAlarm"
+                android:layout_span="2"
+                android:text="Cancel Alarm"/>
+        </TableRow>
+        <TableRow>
+            <TextView
+                style="@style/CustomText"
+                android:text="Need Alarm?"/>
+            <Switch
+                android:id="@+id/switch1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </TableRow>
+
+    </TableLayout>
+    <Button
+        style="@style/btnStyle"
+        android:id="@+id/btnAdd"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Add"
+        android:onClick="volleyPost"/>
+
+    <Button
+        style="@style/btnStyle"
+        android:id="@+id/useQRbtn"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Scan QR code"
+        android:onClick="ScanQRCode"/>
+
+</LinearLayout>
