--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -28,6 +28,9 @@
             android:id="@+id/nav_profile"
             android:icon="@drawable/account"
             android:title="Login / Register" />
+        <item
+            android:id="@+id/nav_testmockapi"
+            android:title="Test / MockApi" />
 
     </group>
 </menu>
