--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -39,4 +39,9 @@
         android:name="fingertiptech.medontime.ui.scanQRcode.ScanQRCodeFragment"
         android:label="@string/menu_scan_qr_code"
         tools:layout="@layout/fragment_scan_qr_code" />
+    <fragment
+        android:id="@+id/nav_testmockapi"
+        android:name="fingertiptech.medontime.ui.testmockapi.TestMockApiFragment"
+        android:label="test/mock/api"
+        tools:layout="@layout/test_mock_api_fragment" />
 </navigation>
