--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,10 +15,9 @@
         <TableRow>
             <TextView
                 style="@style/CustomText"
-                android:text="User Name:"
-                />
+                android:text="User Name:" />
             <EditText
-                android:id="@+id/textview_UserName_Login"
+                android:id="@+id/editText_userName"
                 android:width="200dp"
                 android:hint="Enter username here"/>
         </TableRow>
@@ -28,7 +27,7 @@
                 android:text="Password:"
                 />
             <EditText
-                android:id="@+id/textview_Password_Login"
+                android:id="@+id/editText_Password"
                 android:hint="Enter password here"
                 android:password="true"
                 />
@@ -53,18 +52,18 @@
     </TableLayout>
 
     <Button
-        style="@style/btnStyle"
         android:id="@+id/btnSignIn"
+        style="@style/btnStyle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Sign In"/>
 
     <Button
-        style="@style/btnStyle"
         android:id="@+id/btnRegister"
+        style="@style/btnStyle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Register"
+        android:text="Don't have an account? Register!"
         android:onClick="nextIntent"/>
 
 
