--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -31,7 +31,7 @@
 
     <fragment
         android:id="@+id/nav_profile"
-        android:name="fingertiptech.medontime.ui.profile.ProfileFragment"
+        android:name="fingertiptech.medontime.ui.login.LoginFragment"
         android:label="@string/menu_profile"
-        tools:layout="@layout/fragment_profile" />
+        tools:layout="@layout/fragment_login" />
 </navigation>
