--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,7 +25,7 @@
             android:icon="@drawable/qrcode"
             android:title="Scan QR code" />
         <item
-            android:id="@+id/nav_profile"
+            android:id="@+id/nav_login"
             android:icon="@drawable/account"
             android:title="Login / Register" />
 
