--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -30,8 +30,8 @@
         tools:layout="@layout/fragment_caretaker" />
 
     <fragment
-        android:id="@+id/nav_profile"
+        android:id="@+id/nav_login"
         android:name="fingertiptech.medontime.ui.login.LoginFragment"
-        android:label="@string/menu_profile"
+        android:label="@string/menu_LogIn"
         tools:layout="@layout/fragment_login" />
 </navigation>
