--- a/app/src/main/res/layout/test_mock_api_get_fragment.xml
+++ b/app/src/main/res/layout/test_mock_api_get_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.testmockapi.TestMockApiFragment">
+    tools:context=".ui.testmockapiGET.TestMockApiGetFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewItems"
