--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -30,7 +30,18 @@
             android:title="Login / Register" />
         <item
             android:id="@+id/nav_testmockapi"
-            android:title="Test / MockApi" />
-
+            android:title="Test(GET) / MockApi" />
+        <item
+            android:id="@+id/nav_testmockapiquery"
+            android:title="Test(GET Query) / MockApi" />
+        <item
+            android:id="@+id/nav_testmockapipost"
+            android:title="Test(POST) / MockApi" />
+        <item
+            android:id="@+id/nav_testmockapiputpatch"
+            android:title="Test(PUT PATCH) / MockApi" />
+        <item
+            android:id="@+id/nav_testmockapidelete"
+            android:title="Test(Delete) / MockApi" />
     </group>
 </menu>
