--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -39,4 +39,9 @@
         android:name="fingertiptech.medontime.ui.scanQRcode.ScanQRCodeFragment"
         android:label="@string/menu_scan_qr_code"
         tools:layout="@layout/fragment_scan_qr_code" />
+    <fragment
+        android:id="@+id/nav_scanNFC"
+        android:name="fingertiptech.medontime.ui.scanNFCtag.ScanNFCTagFragment"
+        android:label="@string/menu_scan_NFC_tag"
+        tools:layout="@layout/scan_nfc_tag_fragment" />
 </navigation>
