--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,6 +25,10 @@
             android:icon="@drawable/qrcode"
             android:title="Scan QR code" />
         <item
+            android:id="@+id/nav_scanNFC"
+            android:icon="@drawable/nfc_tag_icon"
+            android:title="Scan NFC Tag" />
+        <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/account"
             android:title="Login / Register" />
