--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -18,7 +18,7 @@
             <EditText
                 android:id="@+id/editText_userName"
                 android:width="200dp"
-                android:hint="Enter username here"/>
+                android:hint="Enter email here"/>
         </TableRow>
         <TableRow>
             <TextView
