add medication model and api connect

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,6 +2,7 @@
 <androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -27,10 +28,13 @@
             android:layout_marginTop="8dp"
             android:text="Scan QR code from Gallary" />
 
-        <!--        <ListView-->
-        <!--            android:id="@+id/listView_home_medicine"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="match_parent" />-->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycleView_medicine"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/medicine_item"/>
+
+
     </LinearLayout>
 
 </androidx.drawerlayout.widget.DrawerLayout>
