--- a/app/src/main/res/layout/fragment_medicine.xml
+++ b/app/src/main/res/layout/fragment_medicine.xml
@@ -96,6 +96,7 @@
                 android:id="@+id/editText_hoursInBetween"
                 android:width="150dp"
                 android:layout_span="2"
+                android:inputType = "number"
                 android:hint="Hours between each dose" />
         </TableRow>
 
@@ -136,6 +137,7 @@
                 android:layout_span="2"
                 android:text="Cancel Alarm"/>
         </TableRow>
+
         <TableRow>
             <TextView
                 style="@style/CustomText"
