--- a/app/src/main/res/layout/scan_nfc_tag_fragment.xml
+++ b/app/src/main/res/layout/scan_nfc_tag_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.scanQRcode.ScanQRCodeFragment">
+    tools:context=".ui.scanNFCtag.ScanNFCTagFragment">
 
     <TextView
         android:id="@+id/text_profile"
