--- a/app/src/main/res/layout/medicine_item.xml
+++ b/app/src/main/res/layout/medicine_item.xml
@@ -12,7 +12,7 @@
         android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#56CDC2"
+        android:background="#EDDCE2"
         android:padding="8dp">
 
         <ImageView
@@ -22,7 +22,7 @@
             android:layout_marginEnd="8dp" />
 
         <TextView
-            android:id="@+id/text_view_medicine_name"
+            android:id="@+id/textView_medication_name"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/image_view_medicine"
@@ -32,26 +32,90 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/text_view_time"
+            android:id="@+id/textView_Medication_time"
             android:layout_width="223dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/text_view_medicine_name"
+            android:layout_below="@id/textView_medication_name"
             android:layout_toEndOf="@id/image_view_medicine"
             android:text="Line 2" />
 
         <TextView
-            android:id="@+id/text_view_dosage"
+            android:id="@+id/textView_Medication_dosage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/text_view_medicine_name"
+            android:layout_toRightOf="@id/textView_medication_name"
             android:text="0" />
 
         <TextView
-            android:id="@+id/text_view_quantity"
+            android:id="@+id/textView_Medication_quantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/text_view_dosage"
-            android:layout_toRightOf="@id/text_view_time"
+            android:layout_below="@id/textView_Medication_dosage"
+            android:layout_toRightOf="@id/textView_Medication_time"
             android:text="0" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_margin="15dp"-->
+<!--    android:layout_height="wrap_content">-->
+
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:layout_width="409dp"-->
+<!--        android:layout_height="match_parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.5"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent">-->
+
+<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent">-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/textView_medication_nme"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="16dp"-->
+<!--                android:layout_marginTop="16dp"-->
+<!--                android:text="TextView"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/textView_Medication_time" />-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/textView_Medication_time"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="16dp"-->
+<!--                android:layout_marginTop="16dp"-->
+<!--                android:text="TextView"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/textView_Medication_quantity" />-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/textView_Medication_dosage"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="16dp"-->
+<!--                android:layout_marginTop="16dp"-->
+<!--                android:text="TextView"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/textView_medication_nme" />-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/textView_Medication_quantity"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="16dp"-->
+<!--                android:layout_marginTop="8dp"-->
+<!--                android:text="TextView"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+<!--    </androidx.cardview.widget.CardView>-->
+<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
