--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,8 +9,12 @@
         android:id="@+id/nav_home"
         android:name="fingertiptech.medontime.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+    <action
+        android:id="@+id/action_medicationListFragment_to_medicaionFragmentDetailFragment1"
+        app:destination="@id/nav_medicine" />
 
+</fragment>
     <fragment
         android:id="@+id/nav_profile"
         android:name="fingertiptech.medontime.ui.profile.ProfileFragment"
@@ -21,7 +25,11 @@
         android:id="@+id/nav_medicine"
         android:name="fingertiptech.medontime.ui.medicine.MedicineFragment"
         android:label="@string/menu_medicine"
-        tools:layout="@layout/fragment_medicine_step1_info" />
+        tools:layout="@layout/fragment_medicine_step1_info" >
+        <argument
+            android:name="medication_id"
+            app:argType="string" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_caretaker"
