--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -46,29 +46,29 @@
         android:name="fingertiptech.medontime.ui.login.LoginFragment"
         android:label="@string/menu_LogIn"
         tools:layout="@layout/fragment_login" />
-    <fragment
-        android:id="@+id/nav_testmockapi"
-        android:name="fingertiptech.medontime.ui.testmockapiGET.TestMockApiGetFragment"
-        android:label="test/mock/api"
-        tools:layout="@layout/test_mock_api_get_fragment" />
-    <fragment
-        android:id="@+id/nav_testmockapiquery"
-        android:name="fingertiptech.medontime.ui.testmockapiGETQuery.TestMockApiQueryFragment"
-        android:label="test/mock/api"
-        tools:layout="@layout/test_mock_api_query_fragment" />
-    <fragment
-        android:id="@+id/nav_testmockapipost"
-        android:name="fingertiptech.medontime.ui.testmockapiPost.TestMockApiPostFragment"
-        android:label="test/mock/api"
-        tools:layout="@layout/test_mock_api_post_fragment" />
-    <fragment
-        android:id="@+id/nav_testmockapiputpatch"
-        android:name="fingertiptech.medontime.ui.testmockapiputpost.TestMockApiPutPatchFragment"
-        android:label="test/mock/api"
-        tools:layout="@layout/test_mock_api_put_patch_fragment" />
-    <fragment
-        android:id="@+id/nav_testmockapidelete"
-        android:name="fingertiptech.medontime.ui.testmockapidelete.TestMockApiDelete"
-        android:label="test/mock/api"
-        tools:layout="@layout/test_mock_api_delete_fragment" />
+<!--    <fragment-->
+<!--        android:id="@+id/nav_testmockapi"-->
+<!--        android:name="fingertiptech.medontime.ui.testmockapiGET.TestMockApiGetFragment"-->
+<!--        android:label="test/mock/api"-->
+<!--        tools:layout="@layout/test_mock_api_get_fragment" />-->
+<!--    <fragment-->
+<!--        android:id="@+id/nav_testmockapiquery"-->
+<!--        android:name="fingertiptech.medontime.ui.testmockapiGETQuery.TestMockApiQueryFragment"-->
+<!--        android:label="test/mock/api"-->
+<!--        tools:layout="@layout/test_mock_api_query_fragment" />-->
+<!--    <fragment-->
+<!--        android:id="@+id/nav_testmockapipost"-->
+<!--        android:name="fingertiptech.medontime.ui.testmockapiPost.TestMockApiPostFragment"-->
+<!--        android:label="test/mock/api"-->
+<!--        tools:layout="@layout/test_mock_api_post_fragment" />-->
+<!--    <fragment-->
+<!--        android:id="@+id/nav_testmockapiputpatch"-->
+<!--        android:name="fingertiptech.medontime.ui.testmockapiputpost.TestMockApiPutPatchFragment"-->
+<!--        android:label="test/mock/api"-->
+<!--        tools:layout="@layout/test_mock_api_put_patch_fragment" />-->
+<!--    <fragment-->
+<!--        android:id="@+id/nav_testmockapidelete"-->
+<!--        android:name="fingertiptech.medontime.ui.testmockapidelete.TestMockApiDelete"-->
+<!--        android:label="test/mock/api"-->
+<!--        tools:layout="@layout/test_mock_api_delete_fragment" />-->
 </navigation>
