--- a/app/src/main/res/layout/scan_nfc_tag_fragment.xml
+++ b/app/src/main/res/layout/scan_nfc_tag_fragment.xml
@@ -3,21 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <!--
-    tools:context=".ui.scanNFCtag.ScanNFCTagFragment" -->
+    android:layout_height="match_parent"
+    tools:context=".ui.scanNFCtag.ScanNFCTagFragment">
 
-    <!--    <Button-->
-    <!--        style="@style/btnStyle"-->
-    <!--        android:id="@+id/btnNext"-->
-    <!--        android:layout_width="fill_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:text="Add"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent"> />-->
+<!--    <TextView-->
+<!--        android:id="@+id/text_profile"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="8dp"-->
+<!--        android:layout_marginTop="8dp"-->
+<!--        android:layout_marginEnd="8dp"-->
+<!--        android:textAlignment="center"-->
+<!--        android:textSize="20sp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
 
-    <!-- NFC Tag Testing Here -->
+<!--    &lt;!&ndash; NFC Tag Testing Here &ndash;&gt;-->
 
 <!--    <LinearLayout-->
 <!--        android:layout_width="wrap_content"-->
@@ -35,8 +38,7 @@
 <!--            android:layout_height="wrap_content"-->
 <!--            android:layout_weight="2"-->
 <!--            android:hint="Type something..."-->
-<!--            android:minHeight="48dp"-->
-<!--            android:visibility="invisible"/>-->
+<!--            android:minHeight="48dp" />-->
 <!--        <Button-->
 <!--            android:layout_width="wrap_content"-->
 <!--            android:layout_height="wrap_content"-->
@@ -67,4 +69,4 @@
 <!--        android:textSize="20dp"/>-->
     <!-- NFC Tag Testing End -->
 
-</androidx.constraintlayout.widget.ConstraintLayout >
+</androidx.constraintlayout.widget.ConstraintLayout>
