word on detail view

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -10,17 +10,28 @@
         android:name="fingertiptech.medontime.ui.home.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home">
-    <action
-        android:id="@+id/action_medicationListFragment_to_medicaionFragmentDetailFragment1"
-        app:destination="@id/nav_medicine" />
 
-</fragment>
+        <action
+            android:id="@+id/action_homeRecycle_to_medicationDetailFragment"
+            app:destination="@id/nav_medicineDetailed" />
+    </fragment>
+
     <fragment
         android:id="@+id/nav_profile"
         android:name="fingertiptech.medontime.ui.profile.ProfileFragment"
         android:label="@string/menu_profile"
         tools:layout="@layout/fragment_profile" />
-
+    <fragment
+        android:id="@+id/nav_medicineDetailed"
+        android:name="fingertiptech.medontime.ui.medicationDetail.MedicationDetailedFragment"
+        android:label="Medication Detailed"
+        tools:layout="@layout/medication_detailed_fragment" >
+        <argument
+            android:name="MedicationObjectId"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="@null"/>
+    </fragment>
     <fragment
         android:id="@+id/nav_medicine"
         android:name="fingertiptech.medontime.ui.medicine.MedicineFragment"
