--- a/app/src/main/res/layout/medicine_item.xml
+++ b/app/src/main/res/layout/medicine_item.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
     app:cardCornerRadius="10dp"
+    android:background="@color/white"
     app:cardElevation="5dp">
 
     <RelativeLayout
