--- a/app/src/main/res/layout/fragment_medicine_step3_nfc_scan.xml
+++ b/app/src/main/res/layout/fragment_medicine_step3_nfc_scan.xml
@@ -2,69 +2,72 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:id="@+id/parentLayout"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:background="@color/white"
+    android:layout_gravity="center">
     <!--
     tools:context=".ui.scanNFCtag.ScanNFCTagFragment" -->
 
-    <!--    <Button-->
-    <!--        style="@style/btnStyle"-->
-    <!--        android:id="@+id/btnNext"-->
-    <!--        android:layout_width="fill_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:text="Add"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent"> />-->
-
     <!-- NFC Tag Testing Here -->
+    <LinearLayout
+        android:id="@+id/toggle_nfc_ui"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center_vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="70sp"
+            android:orientation="vertical"
+            android:gravity="center_vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-    <!--    <LinearLayout-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_marginTop="70sp"-->
-    <!--        android:orientation="vertical"-->
-    <!--        android:gravity="center_vertical"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent">-->
+            <!-- for writing a custom message to NFC tag, replacing with object ID & will delete soon. -->
+            <!--        <EditText-->
+            <!--            android:id="@+id/edit_message"-->
+            <!--            android:layout_width="wrap_content"-->
+            <!--            android:layout_height="wrap_content"-->
+            <!--            android:layout_weight="2"-->
+            <!--            android:hint="Type something..."-->
+            <!--            android:minHeight="48dp"/>-->
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#FFFFFF"
+                android:id="@+id/ActivateButton"
+                android:padding="32sp"
+                android:text="Scan Here"
+                android:textSize="30dp"/>
+        </LinearLayout>
+        <TextView
+            android:id="@+id/nfc_contents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <!--        <EditText-->
-    <!--            android:id="@+id/edit_message"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_weight="2"-->
-    <!--            android:hint="Type something..."-->
-    <!--            android:minHeight="48dp"-->
-    <!--            android:visibility="invisible"/>-->
-    <!--        <Button-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:textColor="#FFFFFF"-->
-    <!--            android:id="@+id/ActivateButton"-->
-    <!--            android:padding="32sp"-->
-    <!--            android:text="Scan Here"-->
-    <!--            android:textSize="30dp"/>-->
-    <!--    </LinearLayout>-->
-    <!--    <TextView-->
-    <!--        android:id="@+id/nfc_contents"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent" />-->
-
-    <!--    <TextView-->
-    <!--        android:id="@+id/textview_first"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:text="NFC Testing Output Here"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent"-->
-    <!--        android:textSize="20dp"/>-->
-    <!-- NFC Tag Testing End -->
+        <TextView
+            android:id="@+id/textview_first"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Fit the tag in the frame above"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textSize="20dp"/>
+        <!-- NFC Tag Testing End -->
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout >
