--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -21,14 +21,14 @@
             android:id="@+id/nav_caretaker"
             android:icon="@drawable/caretakers"
             android:title="Caretakers" />
-        <item
-            android:id="@+id/nav_scanQR"
-            android:icon="@drawable/qrcode"
-            android:title="Scan QR code" />
-        <item
-            android:id="@+id/nav_scanNFC"
-            android:icon="@drawable/nfc_tag_icon"
-            android:title="Scan NFC Tag" />
+<!--        <item-->
+<!--            android:id="@+id/nav_scanQR"-->
+<!--            android:icon="@drawable/qrcode"-->
+<!--            android:title="Scan QR code" />-->
+<!--        <item-->
+<!--            android:id="@+id/nav_scanNFC"-->
+<!--            android:icon="@drawable/nfc_tag_icon"-->
+<!--            android:title="Scan NFC Tag" />-->
         <item
             android:id="@+id/nav_login"
             android:icon="@drawable/account"
